(feat) payment processing based on specific django command
This commit removes the celery-based approach to collect all blocks,
and it breaks down the intended functionality in two separate
processes/commands:

  - `run_payment_providers` is a command where the state of the
  payment network (e.g, blockchain/raiden node) is pulled into the
  internal database. Each active network provider is place on a
  separate thread and is expected to implement an infinite loop.

  - `run_payment_processors` is a command that is meant to check for
  all open payment routes and place it in a separate command, where
  the route can execute its own `process` command. In the case of a
  blockchain payment, this means that the route checks for payments
  made to allocated wallet until a payment is made or the route is
  expired (i.e, the chain block height is beyond the payment window)

The separation of these commands comes from the realization that we do
not really need to bring all the history from the blockchain to our
database in order to be able to accept payments, or even to make
outside transfers. We might eventually be interested in implementing
proper blockchain indexers or (more plausible) simply using the
existing blockchain explorers to collect historical data related to
our wallet history.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,14 @@ services:
     <<: *backend_web_service
     command: uvicorn hub20.api.asgi:application --port 80 --host 0.0.0.0
 
+  run_payment_providers:
+    <<: *backend_service
+    command: django-admin run_providers
+
+  run_payment_processors:
+    <<: *backend_service
+    command: django-admin run_payment_processors
+
   # Celery app
   celery:
     <<: *backend_service
@@ -76,14 +84,3 @@ services:
     <<: *backend_service
     <<: *backend_celery_service
     command: celery -A hub20.api beat -l info -S django
-
-  # # Services to run background to listen and process different event streams
-  # process_stream_pending_transactions:
-  #   <<: *backend_service
-  #   <<: *backend_celery_service
-  #   command: django-admin run_stream_processor hub20.apps.blockchain.client.event_streams.process_pending_transactions --interval 2
-
-  # process_stream_pending_open_route_transfers:
-  #   <<: *backend_service
-  #   <<: *backend_celery_service
-  #   command: django-admin run_stream_processor hub20.apps.core.integrations.web3.process_pending_transfers_in_open_routes
